--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,20 @@ padding-bottom: 100px;
 text-shadow: 1px 1px 2px #BDBDBD;
 }
 
+.split {
+background: #757F9A;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right,  #757F9A, #D7DDE8);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #757F9A ,#D7DDE8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+color: white;
+padding-top: 100px;
+padding-bottom: 100px;
+text-shadow: 1px 1px 2px #BDBDBD;
+}
+
+
 #journeyIntro .jumbotron {
 	background-image: url("http://static1.businessinsider.com/image/530f957b69beddf014b04e20-1200/santorini-sunset.jpg");
 	background-position: center;
