--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,21 @@ a:hover {
 	position: fixed; 
 	float: right; 
 	width: 100%;
+
 }
 
-/*#navbar a {
+#navbarp {
+	z-index: 10;
+	float: right; 
+	width: 100%;
+}
+
+#navbarp li a {
 	text-shadow: grey 1px 1px 3px;
 	color: white;
-}*/
+}
+
+
 
 
 .brightcolor {
@@ -50,6 +59,16 @@ a:hover {
 }
 .carousel-indicators .active {
     background-color: #03A9F4;
+}
+
+#highlight a, 
+#highlight p{
+ padding-left: 0;
+
+}
+
+#highlight ul {
+  list-style-type: none;
 }
 /*self intro*/
 
@@ -116,15 +135,14 @@ a.more:hover{
 
 /*footer*/
 footer {
-	border-top: 2px solid white;
-	background: #F5F5F5;
+/*	background: #F5F5F5;*/
 	padding-bottom: 50px;
 	padding-top: 50px;
 }
 
 footer nav {
 	margin: 0 auto;
-	width: 350px;
+	width: 450px;
 }
 
 
@@ -436,8 +454,7 @@ text-shadow: 1px 1px 2px #BDBDBD;
 }
 /*contact*/
 #contact {
-	color: #757575;
-	padding: 255px 0;
+	padding: 300px 0;
 	text-align: center;
 }
 
