--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ a:hover {
 	text-decoration: none !important;
 }
 /*nav bar*/
+
 #navbar .navbar-brand {
 	font-style: italic;
 }
@@ -99,7 +100,14 @@ a:hover {
 }
 
 
+#other {
+	background-color: #F5F5F5;
+	border-top: 2px solid white;
+}
 
+#carouselExampleIndicators {
+	padding-top: 100px;
+}
 /*project card*/
 
 
@@ -212,6 +220,8 @@ padding-top: 100px;
 padding-bottom: 100px;
 text-shadow: 1px 1px 2px #BDBDBD;
 }
+
+
 
 
 
