--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,10 @@ a:hover {
 	border-top: 2px solid white;
 }
 
+.card-deck .row{
+	max-width: 1200px;
+}
+
 #projectCard .card-footer {
 	background: white;
 }
