--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,10 @@ text-shadow: 1px 1px 2px #BDBDBD;
 	padding: 50px 10% 100px 10%;
 }
 
+.containerimg {
+	padding: 0 14% 0 14%;
+}
+
 .content .intro {
 	padding-bottom: 50px;
 }
