--- a/css/style.css
+++ b/css/style.css
@@ -252,9 +252,10 @@ text-shadow: 1px 1px 2px #BDBDBD;
 
 
 #journeyIntro .jumbotron {
-	background-image: url("http://static1.businessinsider.com/image/530f957b69beddf014b04e20-1200/santorini-sunset.jpg");
+	background-image: url("../image/journey/45.jpg");
 	background-position: center;
 	background-size: 100%;
+	height: 500px;
 }
 
 #splitIntro .jumbotron {
