--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,10 @@ text-shadow: 1px 1px 2px #BDBDBD;
 	padding: 30px 5% 20px 5%;
 }
 
+.content h6 {
+	padding: 10px 5%;
+}
+
 .content .goals li {
 	margin: 0 5% 0 5%;
 }
