fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -521,3 +521,5 @@ small {
 .navbar-dark .navbar-nav li {
     height: 45px;
 }
+
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
