--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {overflow-x: hidden;}
 }
 
 #navbar {
-	z-index: 10;
+	z-index: 100;
 	position: fixed; 
 	float: right; 
 	width: 100%;
@@ -518,6 +518,10 @@ small {
 
 @media screen and (max-width:800px) {
 	#selfIntroLarge {
+		display: none;
+	}
+
+	.hiddenCard {
 		display: none;
 	}
 }
