--- a/css/style.css
+++ b/css/style.css
@@ -216,8 +216,8 @@ padding-bottom: 100px;
 
 .journey {
 background: #C9D6FF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to left, #E2E2E2, #a6b7ed);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #E2E2E2, #a6b7ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 color: white;
 padding-top: 100px;
 padding-bottom: 100px;
