--- a/css/style.css
+++ b/css/style.css
@@ -253,10 +253,10 @@ text-shadow: 1px 1px 2px #BDBDBD;
 
 
 #journeyIntro .jumbotron {
-	background-image: url("../image/journey/45.jpg");
+	background-image: url("../image/journey/60.jpg");
 	background-position: center;
 	background-size: cover;
-	height: 500px;
+	height: 100%;
 	text-shadow: 1px 1px 4px grey;
 }
 
