--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,12 @@ text-shadow: 1px 1px 2px #BDBDBD;
 	color: #007bff;
 }
 
+.card-deck .card {
+	border: 0px; 
+	box-shadow: 0px 0px 20px #E0E0E0;
+}
+
+
 
 
 .content .ui {
